# soco

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
configs/_base_/datasets/: cifar100_224.yaml  small_imagenet.yaml  small_imagenet_with_bboxes.yaml
configs/_base_/metrics/: deletion.yaml  road_lerf.yaml  road_morf.yaml  (+2 more)
configs/imagenet_completeness/: deepshap_imagenet_completeness.yaml  ex_perturb_imagenet_completeness.yaml  gradcam_imagenet_completeness.yaml  iba_imagenet_completeness.yaml  ig_imagenet_completeness.yaml  input_iba_imagenet_completeness.yaml
configs/imagenet_deletion/: deepshap_imagenet_deletion.yaml  ex_perturb_imagenet_deletion.yaml  gradcam_imagenet_deletion.yaml  iba_imagenet_deletion.yaml  ig_imagenet_deletion.yaml  input_iba_imagenet_deletion.yaml
configs/imagenet_soundness/: deepshap_imagenet_soundness.yaml  ex_perturb_imagenet_soundness.yaml  gradcam_imagenet_soundness.yaml  iba_imagenet_soundness.yaml  ig_imagenet_soundness.yaml  input_iba_imagenet_soundness.yaml
soco/classifiers/: __init__.py  builder.py
soco/datasets/: __init__.py  build_dataset.py  image_folder.py  subset_wrapper.py  transform_pipelines.py
soco/imputations/: __init__.py  builder.py  identity.py  road.py  road_utils.py
soco/metrics/: __init__.py  accuracy.py  builder.py  pred_score.py  vision_completeness.py  vision_soundness.py
soco/utils/: __init__.py  img_conversion.py  logging.py
tools/: computer_watermark_attr_percentage.py  generate_partially_modified_smaps.py  generate_shifted_modified_smaps.py  generate_watermark_dataset.py  get_gc_ep_smaps.py  get_ig_ds_gb_smaps.py  get_pooling_smaps.py  get_rectangular_smaps.py  map_weights.py  run_vision_completeness.py  run_vision_soundness.py
(+16 files in other folders)
